--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
+    "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
+    "i18next": "^21.4.0",
     "prop-types": "^15.7.2",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "17.0.2",
+    "react-i18next": "^11.13.0",
+    "react-native": "0.66.1",
     "react-native-extended-stylesheet": "^0.12.0",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-query": "^3.31.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "yup": "^0.29.1"
