Mock user authentication flow, refactor quantity picker, implemented swipe to delete to cart

--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.19.2",
     "formik": "^2.1.4",
     "i18next": "^21.4.0",
+    "kutaisan-react-native-keyboard-aware-scroll-view": "^0.9.4",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-i18next": "^11.13.0",
     "react-native": "0.66.1",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
